--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
       <li>
         <a href="./product-card-component/product-card-component.html"
-          >Product ard Component</a
+          >Product card Component</a
         >
       </li>
     </ul>
