--- a/product-card-component/product-card-component.html
+++ b/product-card-component/product-card-component.html
@@ -25,8 +25,14 @@
   <body>
     <div class="card-container">
       <img
+        class="card-img-col"
         src="./images/image-product-mobile.jpg"
         alt="perfume gabrielle chanen mobile design"
+      />
+      <img
+        class="card-img-row"
+        src="./images/image-product-desktop.jpg"
+        alt=""
       />
       <div class="card-parragraph">
         <span class="card-title">Perfume</span>
