--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
     <header class="header container">
       <div class="logo-container">
         <div>
-          <svg xmlns="http://www.w3.org/2000/svg" height="48" width="48">
-            <path
-              d="M5.8 36.35v-3.4h36.4v3.4Zm0-10.65v-3.4h36.4v3.4Zm0-10.65v-3.4h36.4v3.4Z"
-            />
-          </svg>
+          <input id="btn-menu" type="checkbox" name="menu" />
+          <label for="btn-menu">
+            <img src="./img/menu.svg" alt="" />
+          </label>
         </div>
         <div class="logo-mobile">
           <img
@@ -43,12 +42,14 @@
           />
         </div>
       </div>
-      <ul class="navbar">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Pages</a></li>
-      </ul>
+      <nav>
+        <ul class="navbar">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Pages</a></li>
+        </ul>
+      </nav>
     </header>
     <main class="main">
       <section class="hero container">
