added[Hero]: Finished hero section

--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
       </div>
     </header>
     <main class="main">
-      <section class="hero container">
-        <span class="hero-title">
-          Ing. Nelson González Escalante - Frontend Developer, Based in Costa
-          Rica
+      <section class="hero">
+        <span class="hero-title container">
+          Nelson Gonzalez Frontend Developer Based in Costa Rica
         </span>
+        <img
+          src="https://i.postimg.cc/0NC8b84F/1-Nelson-1.jpg"
+          alt="nelson Portfolio picture"
+        />
       </section>
       <ul>
         <li>
