--- a/index.html
+++ b/index.html
@@ -57,13 +57,21 @@
           alt="nelson Portfolio picture"
         />
       </section>
-      <ul>
-        <li>
-          <a href="./product-card-component/product-card-component.html"
-            >Product Card Component</a
-          >
-        </li>
-      </ul>
+      <section class="projects">
+        <nav>
+          <ul>
+            <li><a href="#">Link1</a></li>
+            <li><a href="#">Link2</a></li>
+            <li><a href="#">Link3</a></li>
+            <li><a href="#">Link4</a></li>
+            <li>
+              <a href="./product-card-component/product-card-component.html"
+                >Product Card Component</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </section>
     </main>
   </body>
 </html>
