--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
       href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;600;700&family=Cabin:wght@400;600;700&family=Martel+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,500,0,0"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap"
+      rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/index.css" />
   </head>
