section[Practicas]: primera maquetación

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           />
         </div>
         <ul class="navbar">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="#practicas">Practicas</a></li>
+          <li><a href="#ejercicios">Ejercicios en Clase</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Pages</a></li>
         </ul>
@@ -62,20 +62,32 @@
           alt="nelson Portfolio picture"
         />
       </section>
-      <section class="projects">
-        <nav>
-          <ul>
-            <li><a href="#">Link1</a></li>
-            <li><a href="#">Link2</a></li>
-            <li><a href="#">Link3</a></li>
-            <li><a href="#">Link4</a></li>
-            <li>
-              <a href="./product-card-component/product-card-component.html"
-                >Product Card Component</a
-              >
-            </li>
-          </ul>
-        </nav>
+
+      <!-- PRACTICAS -->
+      <section id="practice">
+        <p>Practicas</p>
+        <div class="flex-wrapper container">
+          <div class="projects card">
+            <img src="./img/transformers.png" alt="Proyecto Transformers" />
+            <div class="text">
+              <span>Transformers</span>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Molestias, officiis.
+              </p>
+            </div>
+          </div>
+          <div class="projects card">
+            <img src="./img/pluto.png" alt="Proyecto Transformers" />
+            <div class="text">
+              <span>Saturno</span>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Molestias, officiis.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
