add[practicas]: section practicas
+ cards
+cards: media queries 576px, 768px, 992px, 1200px
+ flexbox
+box-shadow

--- a/index.html
+++ b/index.html
@@ -67,23 +67,32 @@
       <section id="practice">
         <p>Practicas</p>
         <div class="flex-wrapper container">
-          <div class="projects card">
+          <div class="card">
             <img src="./img/transformers.png" alt="Proyecto Transformers" />
             <div class="text">
               <span>Transformers</span>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Molestias, officiis.
+                Esta práctica brinda una pequeña lista de personajes, basado en
+                la serie de televisión de los años 80's llamada "Transformers".
+              </p>
+              <p>
+                Adicionalmente se puso en práctica los primeros temas de HTML5 y
+                de CSS3
               </p>
             </div>
           </div>
-          <div class="projects card">
-            <img src="./img/pluto.png" alt="Proyecto Transformers" />
+          <div class="card">
+            <img src="./img/pluto-resized.png" alt="Proyecto Saturno" />
             <div class="text">
               <span>Saturno</span>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Molestias, officiis.
+                Esta práctica recolectamos información del sitio web
+                wikipedia.com sobre el planeta Saturno y alguna de las lunas que
+                orbitan el planeta.
+              </p>
+              <p>
+                El resultado final es un sitio web similar al original con la
+                información obtendia.
               </p>
             </div>
           </div>
