add[new section]: Sección para los ejercicios vistos en clase

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </section>
 
       <!-- PRACTICAS -->
-      <section id="practice">
+      <section id="practicas">
         <p>Practicas</p>
         <div class="flex-wrapper container">
           <div class="card">
@@ -72,12 +72,13 @@
             <div class="text">
               <span>Transformers</span>
               <p>
-                Esta práctica brinda una pequeña lista de personajes, basado en
-                la serie de televisión de los años 80's llamada "Transformers".
+                Para esta práctica realizamos una pequeña lista de personajes,
+                basado en la serie de televisión de los años 80's llamada
+                "Transformers".
               </p>
               <p>
                 Adicionalmente se puso en práctica los primeros temas de HTML5 y
-                de CSS3
+                de CSS3.
               </p>
             </div>
           </div>
@@ -97,6 +98,47 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <!-- Ejercicios -->
+      <section id="ejercicios">
+        <p>Ejercicios en Clase</p>
+        <h2>Semana 3</h2>
+        <article>
+          <div class="flex-wrapper container">
+            <div class="card">
+              <img src="./img/transformers.png" alt="Proyecto Transformers" />
+              <div class="text">
+                <span>Transformers</span>
+                <p>
+                  Para esta práctica realizamos una pequeña lista de personajes,
+                  basado en la serie de televisión de los años 80's llamada
+                  "Transformers".
+                </p>
+                <p>
+                  Adicionalmente se puso en práctica los primeros temas de HTML5
+                  y de CSS3.
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="./img/pluto-resized.png" alt="Proyecto Saturno" />
+              <div class="text">
+                <span>Saturno</span>
+                <p>
+                  Esta práctica recolectamos información del sitio web
+                  wikipedia.com sobre el planeta Saturno y alguna de las lunas
+                  que orbitan el planeta.
+                </p>
+                <p>
+                  El resultado final es un sitio web similar al original con la
+                  información obtendia.
+                </p>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article></article>
       </section>
     </main>
   </body>
