fix[section]: practicas
sizes and content fixed

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
       </section>
 
       <!-- PRACTICAS -->
-      <section id="practicas">
+      <section id="practicas" class="secondary-bg">
         <p>Practicas</p>
+        <h2>Práctica No. 1</h2>
         <div class="flex-wrapper container">
           <div class="card">
             <img src="./img/transformers.png" alt="Proyecto Transformers" />
@@ -75,10 +76,6 @@
                 Para esta práctica realizamos una pequeña lista de personajes,
                 basado en la serie de televisión de los años 80's llamada
                 "Transformers".
-              </p>
-              <p>
-                Adicionalmente se puso en práctica los primeros temas de HTML5 y
-                de CSS3.
               </p>
             </div>
           </div>
@@ -91,9 +88,30 @@
                 wikipedia.com sobre el planeta Saturno y alguna de las lunas que
                 orbitan el planeta.
               </p>
+            </div>
+          </div>
+        </div>
+        <h2>Práctica No. 2</h2>
+        <div class="flex-wrapper container">
+          <div class="card">
+            <img src="./img/box-model.png" alt="Modelo de Caja" />
+            <div class="text">
+              <span>Modelo de Caja</span>
               <p>
-                El resultado final es un sitio web similar al original con la
-                información obtendia.
+                Durante la realización de este ejercicio, apliqué las
+                herramientas del modelo de caja vistas en clase en conbinació
+                con flexbox.
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./img/flexobox.png" alt="Flexbox Layout" />
+            <div class="text">
+              <span>Flexbox Layout</span>
+              <p>
+                Al final de esta práctica, logré interiorizar los tres aspectos
+                más importantes del diseño web responsive: Diseño fluido, media
+                queries y flexible media.
               </p>
             </div>
           </div>
