--- a/index.html
+++ b/index.html
@@ -122,41 +122,55 @@
       <section id="ejercicios">
         <p>Ejercicios en Clase</p>
         <h2>Semana 3</h2>
-        <article>
-          <div class="flex-wrapper container">
-            <div class="card">
-              <img src="./img/transformers.png" alt="Proyecto Transformers" />
-              <div class="text">
-                <span>Transformers</span>
-                <p>
-                  Para esta práctica realizamos una pequeña lista de personajes,
-                  basado en la serie de televisión de los años 80's llamada
-                  "Transformers".
-                </p>
-                <p>
-                  Adicionalmente se puso en práctica los primeros temas de HTML5
-                  y de CSS3.
-                </p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="./img/pluto-resized.png" alt="Proyecto Saturno" />
-              <div class="text">
-                <span>Saturno</span>
-                <p>
-                  Esta práctica recolectamos información del sitio web
-                  wikipedia.com sobre el planeta Saturno y alguna de las lunas
-                  que orbitan el planeta.
-                </p>
-                <p>
-                  El resultado final es un sitio web similar al original con la
-                  información obtendia.
-                </p>
-              </div>
+        <div class="flex-wrapper container">
+          <div class="card">
+            <img src="./img/transformers.png" alt="Proyecto Transformers" />
+            <div class="text">
+              <span>Formularios</span>
+              <p>
+                Aquí tuve dos objetivos principales: Primero entender las
+                características de los formularios en HTML y segundo cómo
+                dibujarlos en combinación con CSS.
+              </p>
             </div>
           </div>
-        </article>
-        <article></article>
+          <div class="card">
+            <img src="./img/pluto-resized.png" alt="Proyecto Saturno" />
+            <div class="text">
+              <span>Modelo de Caja</span>
+              <p>
+                Aquí tuve dos objetivos principales: Primero entender las
+                características de los formularios en HTML y segundo cómo
+                dibujarlos en combinación con CSS.
+              </p>
+            </div>
+          </div>
+        </div>
+        <h2>Semana 4</h2>
+        <div class="flex-wrapper container">
+          <div class="card">
+            <img src="./img/box-model.png" alt="Modelo de Caja" />
+            <div class="text">
+              <span>Modelo de Caja</span>
+              <p>
+                Durante la realización de este ejercicio, apliqué las
+                herramientas del modelo de caja vistas en clase en conbinació
+                con flexbox.
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./img/flexobox.png" alt="Flexbox Layout" />
+            <div class="text">
+              <span>Flexbox Layout</span>
+              <p>
+                Al final de esta práctica, logré interiorizar los tres aspectos
+                más importantes del diseño web responsive: Diseño fluido, media
+                queries y flexible media.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
