add[ejercicios]: nuevas tarjetas
Se agregaron las tarjetas correspondientes a los ejercios de la semana 3

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <h2>Semana 3</h2>
         <div class="flex-wrapper container">
           <div class="card">
-            <img src="./img/transformers.png" alt="Proyecto Transformers" />
+            <img src="./img/formulario.png" alt="Ejercicio de Formularios" />
             <div class="text">
               <span>Formularios</span>
               <p>
@@ -135,31 +135,30 @@
             </div>
           </div>
           <div class="card">
-            <img src="./img/pluto-resized.png" alt="Proyecto Saturno" />
+            <img src="./img/box-model.png" alt="Ejercicio Modelo de Caja" />
             <div class="text">
               <span>Modelo de Caja</span>
               <p>
-                Aquí tuve dos objetivos principales: Primero entender las
-                características de los formularios en HTML y segundo cómo
-                dibujarlos en combinación con CSS.
+                Esta es la base para lograr resolver el primer ejercicio
+                correspondiente a la segunda práctica que evaluava los
+                conocimientos sobre el modelo de caja y flexbox.
               </p>
             </div>
           </div>
         </div>
-        <h2>Semana 4</h2>
+        <h2>Semanas: 4, 5 y 6</h2>
         <div class="flex-wrapper container">
           <div class="card">
-            <img src="./img/box-model.png" alt="Modelo de Caja" />
+            <img src="./img/under_construction.svg" alt="En construccion" />
             <div class="text">
-              <span>Modelo de Caja</span>
+              <span>En construcción</span>
               <p>
-                Durante la realización de este ejercicio, apliqué las
-                herramientas del modelo de caja vistas en clase en conbinació
-                con flexbox.
+                Próximamente publicaré los nuevos ejercicios correspondientes a
+                las semanas 4, 5 y 6.
               </p>
             </div>
           </div>
-          <div class="card">
+          <!-- <div class="card">
             <img src="./img/flexobox.png" alt="Flexbox Layout" />
             <div class="text">
               <span>Flexbox Layout</span>
@@ -169,7 +168,7 @@
                 queries y flexible media.
               </p>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
     </main>
