--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
         <p>Newbie</p>
         <div class="flex-wrapper container">
           <div class="card">
-            <a href="./newbie/interactive-rating-component-main/index.html">
+            <a
+              href="./newbie/interactive-rating-component-main/interactive-rating-component-main.html"
+            >
               <img
                 src="./img/interactive-rating-component-main.jpg"
                 alt="Proyecto Transformers"
