add[rating]: text
+ text
+ classes

--- a/newbie/interactive-rating-component-main/interactive-rating-component-main.html
+++ b/newbie/interactive-rating-component-main/interactive-rating-component-main.html
@@ -26,7 +26,7 @@
     <section>
       <div class="card">
         <div class="card-star">
-          <img src="./img/icon-star.svg" alt="" />
+          <img src="./img/icon-star.svg" alt="icon star" />
         </div>
         <div class="card-title">How did we do?</div>
         <div class="card-text">
@@ -46,24 +46,10 @@
           </ul>
           <!-- Rating state end -->
         </div>
-        <button type="submit">Submit</button>
+        <button type="submit" onclick="window.location.href='./thank-you.html'">
+          Submit
+        </button>
       </div>
-
-      <!-- Thank you state start -->
-
-      You selected
-      <!-- Add rating here -->
-      out of 5 Thank you! We appreciate you taking the time to give a rating. If
-      you ever need more support, don’t hesitate to get in touch!
-
-      <!-- Thank you state end -->
     </section>
-
-    <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
   </body>
 </html>
