--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
             >
               <img
                 src="./img/interactive-rating-component-main.jpg"
-                alt="Proyecto Transformers"
+                alt="interactive-rating-component-main"
               />
             </a>
             <div class="text">
-              <span>Transformers</span>
+              <span>Interactive rating component</span>
               <p>
-                Para esta práctica realizamos una pequeña lista de personajes,
-                basado en la serie de televisión de los años 80's llamada
-                "Transformers".
+                This is a nice, small project to practice handling user
+                interactions and updating the DOM. Perfect for anyone who has
+                learned the basics of JavaScript!
               </p>
             </div>
           </div>
