fixed[Accessibility]: Issues
+ Element contrast
+ Main landmark
+ Level-one heading

--- a/index.html
+++ b/index.html
@@ -204,5 +204,6 @@
         </div>
       </div>
     </footer>
+    <script src="./newbie/interactive-rating-component-main/js/script.js"></script>
   </body>
 </html>
