--- a/newbie/interactive-rating-component-main/interactive-rating-component-main.html
+++ b/newbie/interactive-rating-component-main/interactive-rating-component-main.html
@@ -23,12 +23,14 @@
     <link rel="stylesheet" href="./css/interactive-rating-component-main.css" />
   </head>
   <body>
-    <section>
+    <main>
       <div class="card">
-        <div class="card-star">
+        <figure class="card-star">
           <img src="./img/icon-star.svg" alt="icon star" />
+        </figure>
+        <div class="card-title">
+          <h1>How did we do?</h1>
         </div>
-        <div class="card-title">How did we do?</div>
         <div class="card-text">
           <p>
             Please let us know how we did with your support request. All
@@ -50,6 +52,6 @@
           Submit
         </button>
       </div>
-    </section>
+    </main>
   </body>
 </html>
