new project: QR Code

--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
           <div class="card">
             <a href="./projects/1-newbie/skilled-elearning-landing-page/">
               <img
-                src="./img/newbie/skilled-elearning-landing-page.webp"
+                src="./img/newbie/qr-code-component-main.webp"
                 alt="Proyecto Saturno"
                 width="50px"
               />
             </a>
             <div class="text">
-              <span>Skiller E-Learning</span>
+              <span>QR code component</span>
               <p>
-                Esta práctica recolectamos información del sitio web
-                wikipedia.com sobre el planeta Saturno y alguna de las lunas que
-                orbitan el planeta.
+                A perfect first challenge for practice HTML and CSS. The card
+                layout doesn't shift, so it's ideal to learned about building
+                responsive layouts.
               </p>
             </div>
           </div>
