updated: images links

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="flex-wrapper container">
           <div class="card">
             <a
-              href="./newbie/interactive-rating-component-main/interactive-rating-component-main.html"
+              href="./projects/1-newbie/interactive-rating-component-main/rating-component.html"
             >
               <img
                 src="./img/newbie/interactive-rating-component-main.webp"
@@ -98,7 +98,7 @@
               <span>QR code component</span>
               <p>
                 A perfect first challenge for practice HTML and CSS. The card
-                layout doesn't shift, so it's ideal to learned about building
+                layout doesn't shift, so the idea is to learned about building
                 responsive layouts.
               </p>
             </div>
