update: card styles

--- a/projects/1-newbie/interactive-rating-component-main/rating-component.html
+++ b/projects/1-newbie/interactive-rating-component-main/rating-component.html
@@ -11,17 +11,22 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <!-- CSS: Reset -->
+    <link rel="stylesheet" href="./css/reset.css" />
 
-    <title>Interactive rating component</title>
-    <link rel="stylesheet" href="../../css/reset.css" />
+    <!-- CSS: Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- CSS: Local css -->
     <link rel="stylesheet" href="./css/interactive-rating-component-main.css" />
+    <title>Interactive rating component</title>
   </head>
+
   <body>
     <main>
       <div class="card">
