--- a/projects/1-newbie/interactive-rating-component-main/thank-you.html
+++ b/projects/1-newbie/interactive-rating-component-main/thank-you.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thank you</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
     <link rel="stylesheet" href="../../css/reset.css" />
     <link rel="stylesheet" href="./css/interactive-rating-component-main.css" />
+    <title>thank you</title>
   </head>
+
   <body>
-    <section>
-      <div class="card center">
+    <main>
+      <div class="card">
         <div class="card-icon">
           <img
             src="./img/illustration-thank-you.svg"
@@ -33,6 +40,6 @@
 
         <!-- Thank you state end -->
       </div>
-    </section>
+    </main>
   </body>
 </html>
