--- a/projects/1-newbie/interactive-rating-component-main/rating-component.html
+++ b/projects/1-newbie/interactive-rating-component-main/rating-component.html
@@ -53,7 +53,11 @@
           </ul>
           <!-- Rating state end -->
         </div>
-        <button type="submit" onclick="window.location.href='./thank-you.html'">
+        <button
+          id="btnSubmit"
+          type="submit"
+          onclick="window.location.href='./thank-you.html'"
+        >
           Submit
         </button>
       </div>
