--- a/projects/1-newbie/interactive-rating-component-main/thank-you.html
+++ b/projects/1-newbie/interactive-rating-component-main/thank-you.html
@@ -10,7 +10,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="../../css/reset.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/interactive-rating-component-main.css" />
     <title>thank you</title>
   </head>
@@ -25,7 +25,7 @@
           />
         </div>
         <div class="card-rating-message">
-          <span>You selected 4 out of 5</span>
+          <p>You selected <span id="raiting">0</span> out of 5</p>
         </div>
         <div class="card-title">
           <p>Thank you!</p>
@@ -41,5 +41,6 @@
         <!-- Thank you state end -->
       </div>
     </main>
+    <script src="./js/script.js"></script>
   </body>
 </html>
