added: header with all break points

--- a/index.html
+++ b/index.html
@@ -107,15 +107,18 @@
         <h2>Práctica No. 2</h2>
         <div class="flex-wrapper container">
           <div class="card">
-            <a href="./practica-02/ejercicio-01/box-model.html">
-              <img src="./img/box-model.png" alt="Modelo de Caja" />
+            <a href="./projects/1-newbie/skilled-landing-page/index.html">
+              <img
+                src="./img/newbie/skilled-landing-page.webp"
+                alt="skilled Landing Page"
+              />
             </a>
             <div class="text">
-              <span>Modelo de Caja</span>
+              <span>Skilled Elearning Landing Page</span>
               <p>
-                Durante la realización de este ejercicio, apliqué las
-                herramientas del modelo de caja vistas en clase en conbinació
-                con flexbox.
+                This is a web site think for an on line Institute or university.
+                You can find an interesting landing page design with nice UI
+                interfase.
               </p>
             </div>
           </div>
