--- a/projects/1-newbie/skilled-landing-page/index.html
+++ b/projects/1-newbie/skilled-landing-page/index.html
@@ -24,5 +24,14 @@
     <link rel="stylesheet" href="./css/global.css" />
     <title>Skilled E-Learnini Landing Page</title>
   </head>
-  <body></body>
+  <body>
+    <header class="container">
+      <figure>
+        <img src="./images/logo-dark.svg" alt="Skilled Academy Dark Logo" />
+      </figure>
+      <button>Get Started</button>
+    </header>
+    <main>main</main>
+    <footer>footer</footer>
+  </body>
 </html>
