added: Section [main-text] Title, parragraph and button

--- a/projects/1-newbie/skilled-landing-page/index.html
+++ b/projects/1-newbie/skilled-landing-page/index.html
@@ -31,7 +31,20 @@
       </figure>
       <button>Get Started</button>
     </header>
-    <main>main</main>
+
+    <main>
+      <section class="main-text container">
+        <h1>Maximize skill, minimize budget</h1>
+        <p>
+          Our modern courses across a range of in-demand skills will give you
+          the knowledge you need to live the life you want.
+        </p>
+        <button>Get Started</button>
+      </section>
+    </main>
+    <br />
+    <hr />
+    <br />
     <footer>footer</footer>
   </body>
 </html>
