added: Section [main-text] Image for Home Langing Page

--- a/projects/1-newbie/skilled-landing-page/index.html
+++ b/projects/1-newbie/skilled-landing-page/index.html
@@ -40,6 +40,12 @@
           the knowledge you need to live the life you want.
         </p>
         <button>Get Started</button>
+        <figure>
+          <img
+            src="https://trekab.io/skilled-e-learning-landing-page/assets/image-hero-mobile.png"
+            alt="Hero Landing Page Image"
+          />
+        </figure>
       </section>
     </main>
     <br />
