added: Div [intro-tablet] this is the layout for table view

--- a/projects/1-newbie/skilled-landing-page/index.html
+++ b/projects/1-newbie/skilled-landing-page/index.html
@@ -33,19 +33,32 @@
     </header>
 
     <main>
-      <section class="main-text container">
-        <h1>Maximize skill, minimize budget</h1>
-        <p>
-          Our modern courses across a range of in-demand skills will give you
-          the knowledge you need to live the life you want.
-        </p>
-        <button>Get Started</button>
-        <figure>
-          <img
-            src="https://trekab.io/skilled-e-learning-landing-page/assets/image-hero-mobile.png"
-            alt="Hero Landing Page Image"
-          />
-        </figure>
+      <section class="intro container">
+        <!-- DIV: Mobile -->
+        <div class="intro-mobile">
+          <h1>Maximize skill, minimize budget</h1>
+          <p>
+            Our modern courses across a range of in-demand skills will give you
+            the knowledge you need to live the life you want.
+          </p>
+          <button>Get Started</button>
+          <figure class="intro-img"></figure>
+        </div>
+        <div class="intro-tablet">
+          <div class="intro-tablet-text">
+            <h1>Maximize skill, minimize budget</h1>
+            <p>
+              Our modern courses across a range of in-demand skills will give
+              you the knowledge you need to live the life you want.
+            </p>
+            <button>Get Started</button>
+          </div>
+
+          <!-- DIV: Tablet -->
+          <div class="intro-tablet-image">
+            <figure class="intro-img"></figure>
+          </div>
+        </div>
       </section>
     </main>
     <br />
