finished: Section [intro]: tablet 768px break point

--- a/projects/1-newbie/skilled-landing-page/index.html
+++ b/projects/1-newbie/skilled-landing-page/index.html
@@ -33,9 +33,9 @@
     </header>
 
     <main>
-      <section class="intro container">
+      <section class="intro">
         <!-- DIV: Mobile -->
-        <div class="intro-mobile">
+        <div class="intro-mobile container">
           <h1>Maximize skill, minimize budget</h1>
           <p>
             Our modern courses across a range of in-demand skills will give you
@@ -44,6 +44,8 @@
           <button>Get Started</button>
           <figure class="intro-img"></figure>
         </div>
+
+        <!-- DIV: Tablet -->
         <div class="intro-tablet">
           <div class="intro-tablet-text">
             <h1>Maximize skill, minimize budget</h1>
@@ -54,7 +56,6 @@
             <button>Get Started</button>
           </div>
 
-          <!-- DIV: Tablet -->
           <div class="intro-tablet-image">
             <figure class="intro-img"></figure>
           </div>
