FEAT: NFT preview card component

--- a/index.html
+++ b/index.html
@@ -122,15 +122,20 @@
             </div>
           </div>
           <div class="card">
-            <a href="./practica-02/ejercicio-02/flexbox.html">
-              <img src="./img/flexobox.png" alt="Flexbox Layout" />
+            <a
+              href="./projects/1-newbie/nft-preview-card-component-main/index.html"
+            >
+              <img
+                src="./img/newbie/nft-preview-card-component-4.webp"
+                alt="NTF Preview Card Component"
+              />
             </a>
             <div class="text">
-              <span>Flexbox Layout</span>
+              <span>NFT preview card component</span>
               <p>
-                Al final de esta práctica, logré interiorizar los tres aspectos
-                más importantes del diseño web responsive: Diseño fluido, media
-                queries y flexible media.
+                This HTML & CSS only challenge is perfect for anyone just
+                starting out or anyone wanting a small project to play around
+                with.
               </p>
             </div>
           </div>
